k8s/ai-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-backend
  labels:
    app: ai-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-backend
  template:
    metadata:
      labels:
        app: ai-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: ai-api
          image: tsermakov/actium-ai-backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ai-backend
spec:
  selector:
    app: ai-backend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
