k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: actium-monitoring
  labels:
    app: grafana
    component: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        component: monitoring
    spec:
      serviceAccountName: grafana
      containers:
        - name: grafana
          image: grafana/grafana:latest
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning
              readOnly: true

        - name: grafana-sc-dashboard
          image: kiwigrid/k8s-sidecar:1.28.0
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
      volumes:
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: grafana-provisioning
          configMap:
            name: grafana-provisioning
            items:
              - key: datasource.yaml
                path: datasources/datasource.yaml
              - key: provider.yaml
                path: dashboards/provider.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: actium-monitoring
  labels:
    app: grafana
    component: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30300
