k8s/user-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-account-backend
  labels:
    app: user-account-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-account-backend
  template:
    metadata:
      labels:
        app: user-account-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: backend
          image: tsermakov/actium-user-account-backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15 # Даем время на прогрев
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-account-backend
spec:
  selector:
    app: user-account-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
